Apply suggestion from @fdelbrayelle